--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ We are its heart.
                     </form>
 
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 border">
+                <div class="col-sm-12 col-md-6 col-lg-6 border p-4">
 
                     <h3>CALL NOW <a href="tel:706-417-6231">706-417-6231</a></h3>
                     <h2><span>OR</span></h2>
