--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@ We are its heart.
 
                     <div class="email-area">
                         <ul>
-                            <li>Sales Inquiries: sales@securtech.co</li>
-                            <li>For Billing: accounting@securtech.co</li>
-                            <li>For Technical Support: help@securtech.co</li>
+                            <li><span class="query">Sales Inquiries:</span> <span>@securtech.co</span></li>
+                            <li><span class="query">For Billing:</span> <span>accounting@securtech.co</span></li>
+                            <li><span class="query">For Technical Support:</span> <span>help@securtech.co</span></li>
                         </ul>
 
                     </div>
