--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
     
                     <li>
-                    <a href="tel:+706-417-6231"><i class="fas fa-mobile-alt mr-2"></i>+706-417-6231 </a>
+                    <a href="tel:+706-717-6231"><i class="fas fa-mobile-alt mr-2"></i>+706-717-6231 </a>
                     </li>
                 </ul>
     
@@ -447,7 +447,7 @@ We are its heart.
                         <div class="form-group">
                             <label for="sel1">Select list:</label>
                             <select class="form-control" id="sel1">
-                              <option>1</option>
+                              <option></option>
                               <option>2</option>
                               <option>3</option>
                               <option>4</option>
@@ -463,7 +463,7 @@ We are its heart.
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 border p-4">
 
-                    <h3>CALL NOW <a href="tel:706-417-6231">706-417-6231</a></h3>
+                    <h3>CALL NOW <a href="tel:706-717-6231"> <i class="fas fa-mobile-alt mr-2"></i>706-717-6231</a></h3>
                     <h2><span>OR</span></h2>
                     <h3>EMAIL NOW </h3>
 
