--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="expertise-section">
 <div class="container remove-blurr">
-    <h2>Our expertise</h2>
+    <h2>Our Expertise</h2>
 
     <div class="expertise-row">
         <div class="row">
@@ -523,16 +523,19 @@ We are its heart.
                     <div class="col-sm-12 col-md-2 col-lg-2">
                         <ul class="mtss-4">
                             <li>
-                                <a href="#" class="footer-about">About Us</a>
+                                <a href="#" class="footer-about">Navigation</a>
                             </li>
                             <li>
                                 <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="#">Services</a>
+                                <a href="#">About</a>
                             </li>
                             <li>
                                 <a href="$">Contact</a>
+                            </li>
+                            <li>
+                                <a href="#">Services</a>
                             </li>
                         </ul>
 
