--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="resized/home/HOME-2.jpg" alt="Los Angeles" >
+            <img src="HOME SLICED IMGS/HOME SLICED IMGS/HOME-1/HOME-1.jpg" alt="Los Angeles" >
           </div>
           <div class="carousel-item">
-            <img src="resized/home/HOME-3.jpg" alt="Chicago">
+            <img src="HOME SLICED IMGS/HOME SLICED IMGS/HOME-3/HOME-3.jpg" alt="Chicago">
           </div>
           <div class="carousel-item">
-            <img src="resized/home/HOME1.jpg" alt="New York">
+            <img src="HOME SLICED IMGS/HOME SLICED IMGS/HOME-2/HOME-2.jpg" alt="New York">
           </div>
         </div>
         
