--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="second-nav-bar">
             <div class="container">
                 <div class="logo-manag">
-                    <a class="navbar-brand" href="index.html"><img src="image/logo2.png"></a>
+                    <a class="navbar-brand" href="index.html"><img src="image/new-logo-removebg-preview.png"></a>
                 <nav class="navbar navbar-expand-lg bg-dadrk navbar-dark">
                     
                     <!-- Brand -->
@@ -84,7 +84,7 @@
         <!----------------------------Hero Section -------------------->
 
 <div class="hero-section">  
-    <!--<div class="Think-area">
+    <div class="Think-area">
         <div class="inner-text">
             <h2>
                 THINK, PLAN, LAUNCH, GROW
@@ -93,8 +93,8 @@
                 BRINGING YOUR IDEAS INTO REALITY
             </p>
         </div>
-    </div> -->
-    <div id="demo" class="carousel slide" data-ride="carousel" data-interval="3000">
+    </div> 
+    <div id="demo" class="carousel slide" data-ride="carousel" data-interval="2000">
 
         <!-- Indicators -->
         <!--<ul class="carousel-indicators">
