--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ We are its heart.
                     <div class="col-sm-12 col-md-3 col-lg-3">
 
                         <ul>
-                            <li><a href="index.html"> <img src="image/w-logo.png"></a></li>
+                            <li><a href="index.html"> <img src="image/FINAL-SecurTech_white.png"></a></li>
                             <li><a href="index.html">www.securetech.co</a></li>
                             <li><p>Be everywhere, do everything, and never fail to astonish the customer</p></li>
                             <li class="social-links">
