--- a/index.html
+++ b/index.html
@@ -161,15 +161,7 @@
                     <div class="col-sm-12 col-md-8 col-lg-8">
                         
                         <p>
-                            We are all very different. We were born in different cities
-    at different times, we love different music, food, movies.
-    But we have something that unites us all. It is our company.
-    We are its heart. We are not just a team, we are a family. It
-    is the ability to think outside the box. We make decisions,
-    create something new and generate a lot of ideas. It is always
-    accurate, all promises are fulfilled, all questions get answers,
-    the company presents very attentive and positive approach all
-    questions get answers, Random text.
+                            SecurTech Solutions LLC is a privately owned security and tech innovation company based out of Atlanta, GA. With over ten plus years of security and technology experience, we offer our clients a variety of services to meet both their personal and business needs. We provide our customers with the latest security and technology innovations with seamless integration. From asset protection to computer networking, we thrive to ensure the security of our clients.
                         </p>
     
                         <div class="read-more">
