--- a/index.html
+++ b/index.html
@@ -1281,12 +1281,15 @@ The whole process is carried out keeping clients requirements, budget and timefr
 
                     <div class="email-area">
                         <ul>
-                            <li><span class="query">Sales Inquiries:</span> <span>@securtech.co</span></li>
+                            <li><span class="query">Sales Inquiries:</span> <span>sales@securtech.co</span></li>
                             <li><span class="query">For Billing:</span> <span>accounting@securtech.co</span></li>
                             <li><span class="query">For Technical Support:</span> <span>help@securtech.co</span></li>
                         </ul>
 
                     </div>
+                    <p class="p-0">
+                        Please feel free to contact us for any questions regarding any solution you are looking for, any problem you are facing with your existing infrastructure, or just for general guidance and assistance. Our experts at SecurTech Solutions will take pleasure in guiding you to the best of their potential.
+                    </p>
 
                 </div>
 
