--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
     
                     <li>
-                    <a href="tel:+706-717-6231"><i class="fas fa-mobile-alt mr-2"></i>+706-717-6231 </a>
+                    <a href="tel:+706-717-6231"><i class="fas fa-mobile-alt mr-2 phone"></i>+706-717-6231 </a>
                     </li>
                 </ul>
     
@@ -1275,7 +1275,7 @@ The whole process is carried out keeping clients requirements, budget and timefr
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6 border p-4">
 
-                    <h3>CALL NOW <a href="tel:706-717-6231"> <i class="fas fa-mobile-alt mr-2"></i>706-717-6231</a></h3>
+                    <h3>CALL NOW <a href="tel:706-717-6231"> <i class="fas fa-mobile-alt mr-2 ml-2 phone-2"></i>706-717-6231</a></h3>
                     <h2><span>OR</span></h2>
                     <h3>EMAIL NOW </h3>
 
