--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
     
                     <li>
-                    <a href="tel:+706-717-6231"><i class="fas fa-mobile-alt mr-2 phone"></i>+706-717-6231 </a>
+                    <a href="tel:+706-717-6231"><i class="fas fa-mobile-alt mr-2 phone"></i> +706-717-6231 </a>
                     </li>
                 </ul>
     
@@ -1322,6 +1322,8 @@ The whole process is carried out keeping clients requirements, budget and timefr
                         <ul>
                             <li><a href="index.html"> <img src="image/FINAL-SecurTech_white.png"></a></li>
                             <li><a href="index.html">www.securetech.co</a></li>
+                            <li>
+                            <a href="tel:706-717-6231">CALL NOW : <i class="fas fa-mobile-alt mr-2 ml-2 phone-3"></i>706-717-6231</a></li>
                             <li><p>Be everywhere, do everything, and never fail to astonish the customer</p></li>
                             <li class="social-links">
                                 <a href="#"><i class="fab fa-facebook"></i></a>
